# MyEngine

./: .clang-format  .editorconfig  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  MyEngine.project.json  build_vulkan.bat  cooker_main.cpp  design.md  editor_packager_main.cpp  gensln.bat  imgui.ini  main.cpp  player_main.cpp  temp_fix_pp.py  xmake.lua
.github/workflows/: windows-ci.yml
.myengine/: AssetDatabase.json.bak
.myengine/recovery/: session.json
Config/: EditorLayout.default.json  EditorScripts.json
Content/: NewShader.shader
Content/Config/: Input.input.json  InputGlyphs.glyph.json  Performance.profile.json  RuntimeScreens.ui.json
Content/Lighting/: Untitled.lightprobes
Content/Materials/: NewMaterial.mat
Content/Navigation/: AdventureSample.navmesh
Content/Particles/: PickupGlow.particle
Content/Prefabs/: AdventureEnemy.prefab.json  monkey.prefab.json
Content/Scenes/: AdventureComplete.scene.json  AdventureSample.scene.json  Main.scene.json  sponza
Content/Scripts/: RotatingCube.as  ThirdPersonAdventure.as
Content/UI/: AdventureHUD.rcss  AdventureHUD.rml  RmlExample.rcss  RmlExample.rml
EngineContent/Shaders/: AtmosphereCubemap.hlsl  AtmosphereCubemap.shader  AtmosphereSH.hlsl  AtmosphereSH.shader  ClusterCount.shader  ClusterLighting.shader  ClusterPrefix.shader  ClusterScatter.shader  ClusteredDeferred.hlsl  DDGIProbeUpdate.hlsl  DDGIProbeUpdate.shader  DebugDraw.hlsl  DebugDraw.shader  DeferredLightingPass.hlsl  DeferredLightingPass.shader  EnvironmentMipmap.hlsl  EnvironmentMipmap.shader  EnvironmentRadiance.hlsli  GBufferPass.hlsl  GBufferPass.shader  Mesh.hlsl  Mesh.shader  ModernAtrous.shader  ModernBloomTone.shader  ModernCulling.hlsl  ModernCulling.shader  ModernDepth.hlsl  ModernDepth.shader  ModernEffectsComposite.shader  ModernGBuffer.hlsl  ModernGBuffer.shader  ModernHiZ.hlsl  ModernHiZInit.shader  ModernHiZReduce.shader  ModernOcclusionCulling.shader  ModernRTAO.shader  ModernRTDiffuse.shader  ModernRTReflection.shader  ModernRTShadow.shader  ModernRayTracing.hlsl  (+26 more)
Saved/PerformanceReports/: cold-start-d3d11.json  resource-stress-d3d11.json  scene-transition-d3d11.json  warm-gameplay-d3d11.json
Saved/SaveGames/: profile.json
build_linux/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
docs/: README.md  architecture.md  ci-self-hosted-runner.md  editor-editing-workflows.md  editor-scripting.md  gameplay-scripting.md  production-roadmap.md  rendering-math-conventions.md  runtime-features.md  shader-content-pipeline.md
docs/classes/: INDEX.md
docs/validation/: 2026-07-12-m5-performance.md  2026-07-12-m5-task-service.md  2026-07-12-p0-p1-production-foundation.md  2026-07-12-sprint1-3-m4.md
logs/: AtmosphereSH_test.spv  AtmosphereSH_test.spvasm  ShadowedMainPass_test.spv  ShadowedMainPass_test.spvasm
src/: xmake.lua
src/Apps/: CookerMain.cpp  EditorMain.cpp  IconToolMain.cpp  PlayerMain.cpp  xmake.lua
src/Assets/: AssetManager.cpp  AssetManager.h  MaterialAsset.h  MeshAsset.h  ModelAsset.h  TextureAsset.h
src/Camera/: Camera.cpp  Camera.h
src/Core/: Application.cpp  Application.h  Engine.cpp  Engine.h  Event.cpp  Event.h  Layer.cpp  LayerStack.cpp  LayerStack.h  Logger.h  Math.h  Platform.h  PlatformEventBridge.h  Time.cpp  Time.h  Window.cpp
src/Editor/: AssetImportService.cpp  AssetImportService.h  CookDependencyGraph.cpp  CookDependencyGraph.h  EditorAction.cpp  EditorAction.h  EditorAssetRegistry.cpp  EditorAssetRegistry.h  EditorClipboardService.cpp  EditorClipboardService.h  EditorCommand.cpp  EditorCommand.h  EditorContext.cpp  EditorContext.h  EditorContextMenu.cpp  EditorContextMenu.h  EditorDialogService.cpp  EditorDialogService.h  EditorDragDrop.cpp  EditorDragDrop.h  EditorImGuiBackend.cpp  EditorImGuiBackend.h  EditorImGuiMetalBridge.h  EditorImGuiMetalBridge.mm  EditorImGuiVulkanBridge.cpp  EditorImGuiVulkanBridge.h  EditorImportService.cpp  EditorImportService.h  EditorInspectorSection.h  EditorLayer.cpp  EditorLayer.h  EditorLayout.cpp  EditorLayout.h  EditorLayoutManager.cpp  EditorLayoutManager.h  EditorLightingBakeService.cpp  EditorLightingBakeService.h  EditorLogService.cpp  EditorLogService.h  EditorLuaScriptService.cpp  (+61 more)
src/Game/: GameLayer.cpp  GameLayer.h  SceneLayer.h  SceneRenderLayer.cpp  SceneRenderLayer.h  TriangleLayer.cpp
src/Input/: Input.cpp  Input.h
src/Renderer/: D3D11Context.cpp  D3D11Context.h  D3D12Context.cpp  D3D12Context.h  IRenderContext.h  MainPass.cpp  MainPass.h  MeshShader.h  MetalContext.h  MetalContext.mm  RenderPass.h  Renderer.cpp  Renderer.h  ShadowPass.h  TriangleShader.h
src/Runtime/: RuntimeModule.cpp  xmake.lua
src/Scene/: Actor.cpp  Actor.h  Component.h  MeshRendererComponent.h  Scene.h  SceneSerializer.cpp  Transform.h
tests/: ArchitectureFixtureBackendLeak.lua  ArchitectureFixtureDependencyCycle.lua  ArchitectureFixtureDomainLeak.lua  ArchitectureFixtureDuplicateDefine.lua  ArchitectureFixtureFragmentCrossModule.lua  ArchitectureFixtureFragmentMultiple.lua  ArchitectureFixtureFragmentZero.lua  ArchitectureFixtureIllegalReverseEdge.lua  ArchitectureFixturePackageFeature.lua  ArchitectureFixturePlatformSource.lua  ArchitectureFixtureRootPollution.lua  ArchitectureFixtureRuntimeEditor.lua  ArchitectureFixtureSourceOwnership.lua  ArchitectureFixtureTestsEditorDuplicate.lua  ArchitectureFixtureValid.lua  AssetsTests.cpp  DebugDrawTests.cpp  EditorSourceContractTests.cpp  EditorTests.cpp  EngineTests.cpp  PhysicsTests.cpp  ProjectTests.cpp  RendererTests.cpp  ScriptingTests.cpp  TestHarness.cpp  TestHarness.h  TestMain.cpp  xmake.lua
tools/: build-macos.sh  check-format.ps1  check-rhi-boundaries.ps1  clang-format.ps1  clean-workspace.ps1  embed_hlsl.ps1  gpu-device-loss-lab.ps1  incremental-build-test.ps1  performance-gates.ps1  publish-editor.ps1  publish.ps1  release-smoke-editor.ps1  release-smoke.ps1  smoke.ps1
xmake/: architecture.lua  build_config.lua  imgui_metal.lua  module.lua  options.lua  package_catalog.lua  packages.lua  rules.lua  xmake.lua
xmake/abi/: runtime-windows-x64.exports
(+628 files in other folders)
